--- a/css/style.css
+++ b/css/style.css
@@ -71,8 +71,9 @@ body{
 
     background-color: white;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
-    
+    box-shadow: -2px 20px 21px -10px hsl(234, 12%, 34%,0.19);
+    -webkit-box-shadow: -2px 20px 21px -10px hsl(234, 12%, 34%,0.19);
+    -moz-box-shadow: -2px 20px 21px -10px hsl(234, 12%, 34%,0.19);
 }
 
 .card-body{
